# dynawatermark

./: .gitignore  README.md  pyproject.toml
docs/: config-reference.md  implementation-plan.md  metadata-schema.md  requirements.md  web-gui.md
examples/: config.advanced-random.json  config.random.json  config.scheduled.json  config.subtle-random.json
src/dynawatermark/: cli.py  config.py  errors.py  event_generator.py  ffmpeg_renderer.py  hashing.py  metadata.py  service.py  video_probe.py  watermark_asset.py
src/dynawatermark/web/: __init__.py  __main__.py  main.py
src/dynawatermark/web/static/: app.js  index.html
tests/: test_e2e_render.py  test_event_generator.py  test_hashing.py  test_metadata.py  test_service.py
