[project]
name = "dynawatermark"
version = "0.1.0"
description = "Dynamic traceable video watermarking CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=12.2.0",
    "pydantic>=2.13.2",
    "rich>=15.0.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
dynawatermark = "dynawatermark.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
